add script file

--- a/SliderApp/index.html
+++ b/SliderApp/index.html
@@ -23,9 +23,9 @@
                     <img class="card-img-top" src="img/1.jpg" alt="">
 
                     <div class="card-body">
-                        <h5 class="card-title">Manzara 1</h5>
+                        <h5 class="card-title"></h5>
                         <p class="card-text"></p>
-                        <a class="card-link" href="#">Read More</a>
+                        <a class="card-link" href="">Read More</a>
                     </div>
 
                     <div class="card-footer">
@@ -49,6 +49,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
     </script>
+    <script src="script.js"></script>
 </body>
 
 </html>
