--- a/SliderApp/index.html
+++ b/SliderApp/index.html
@@ -10,8 +10,14 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-        <script src="https://kit.fontawesome.com/8556d1cc97.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/8556d1cc97.js" crossorigin="anonymous"></script>
 
+    <style>
+        .fas{
+            cursor: pointer;
+        }
+
+    </style>
     <title>Hello, world!</title>
 </head>
 
@@ -20,7 +26,7 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="card">
-                    <img class="card-img-top" src="img/1.jpg" alt="">
+                    <img class="card-img-top" src="" alt="">
 
                     <div class="card-body">
                         <h5 class="card-title"></h5>
