random or in-order slide transition by time

--- a/SliderApp/index.html
+++ b/SliderApp/index.html
@@ -35,8 +35,8 @@
                     </div>
 
                     <div class="card-footer">
-                        <i class="fas fa-arrow-left fa-2x mr-3"></i>
-                        <i class="fas fa-arrow-right fa-2x ml-3"></i>
+                        <i class="fas fa-arrow-left fa-2x mr-3 arrow"></i>
+                        <i class="fas fa-arrow-right fa-2x ml-3 arrow"></i>
                     </div>
                 </div>
 
