Message box exercise

--- a/JQuery/index.html
+++ b/JQuery/index.html
@@ -41,6 +41,8 @@
         }
         */
   
+       /*
+       **Message Box Exercise**
         body{
             margin: 0;
             padding: 0;
@@ -72,6 +74,9 @@
         #close:hover{
             color: red;
         }
+        */
+
+
 
     </style>
 </head>
@@ -162,7 +167,8 @@
     </div>
     -->
    
-    
+    <!--
+        **Message Box Exercise**
    <div id="message-box">
        <div id="header">
            You have a message!
@@ -172,9 +178,19 @@
 
        </div>
    </div>
+
+   -->
    
+   
+
+
    <script>
 
+
+
+
+       /*
+       **Message Box Exercise**
         $(document).ready(function(){
 
             $("#header").click(function(){
@@ -185,7 +201,7 @@
                 $("#message-box").hide("slow");
             })
         });
-
+        */
 
         /*
         **JQuery Effects (animate)**
