--- a/JQuery/Back-To-Top/index.html
+++ b/JQuery/Back-To-Top/index.html
@@ -42,6 +42,14 @@
                 font-size: 3.5rem;
             }
         }
+
+        .backtotop{
+            position: fixed;
+            bottom: 20px;
+            right: 30px;
+            display: none;
+        }
+
     </style>
     <!-- Custom styles for this template -->
     <link href="https://getbootstrap.com/docs/4.4/examples/album/album.css" rel="stylesheet">
@@ -315,7 +323,7 @@
     <footer class="text-muted">
         <div class="container">
             <p class="float-right">
-                <a href="#">Back to top</a>
+                <button class="backtotop btn btn-primary">Back to top</button>
             </p>
             <p>Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
             <p>New to Bootstrap? <a href="https://getbootstrap.com/">Visit the homepage</a> or read our <a
@@ -329,6 +337,25 @@
     </script>
      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+     <script>
+        $(document).ready(function(){
+
+            $(window).scroll(function(){
+                if($(window).scrollTop() > 100){
+                 $(".backtotop").fadeIn();
+                }
+                else{
+                    $(".backtotop").fadeOut();
+                }
+            });
+
+            $(".backtotop").click(function(){
+                $("html,body").animate({scrollTop:0},700);
+            });
+
+         });
+     </script>
 </body>
 
 </html>
