--- a/Error Handling/index.html
+++ b/Error Handling/index.html
@@ -7,6 +7,15 @@
 </head>
 <body>
     <h1>Hello Error Handling</h1>
+
+    <form action="">
+        Name: <input type="text" id="name"><br><br>
+        Age: <input type="text" id="age"><br><br>
+        <input type="submit" id="myBtn"><br><br>
+        <div id="errors"></div>
+    </form> 
+
+
     <script src="script.js"></script>
 </body>
 </html>
