--- a/Rest Api/index.html
+++ b/Rest Api/index.html
@@ -20,6 +20,7 @@
                         <div class="input-group-append">
                             <button type="button" class="btn btn-primary" id="getOne">Get One</button>
                             <button type="button" class="btn btn-info"id="getAll">Get All</button>
+                            <button type="button" class="btn btn-warning"id="postData">Post</button>
                         </div>
                     </div>
                 </form>
