--- a/Promise Exercise/index.html
+++ b/Promise Exercise/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="users"></div>
     <script src="script.js"></script>
 </body>
 </html>
