Showing datas on html page.

--- a/API Project/index.html
+++ b/API Project/index.html
@@ -26,6 +26,7 @@
                 <h2>Profile Finder</h2>
                 <p class="lead">Start Typing to Find a Profile</p>
                 <input type="text" id="search" class="form-control">
+                <span id="alert" class="bg-danger"></span>
             </div>
         </div>
     </div>
