--- a/OEM Calculator/index.html
+++ b/OEM Calculator/index.html
@@ -30,16 +30,16 @@
                     <div class="form-row">
 
                         <div class="form-group col-md-6">
-                            <input type="text" class="form-control" id="nmae" placeholder="Product Name">
+                            <input type="text" class="form-control" id="productName" placeholder="Product Name">
                         </div>
 
                         <div class="form-group col-md-6">
-                            <input type="text" class="form-control" id="price" placeholder="Price">
+                            <input type="text" class="form-control" id="productPrice" placeholder="Price">
                         </div>
 
                     </div>
 
-                    <button type="submit" class="btn btn-primary btn-sm">
+                    <button type="submit" class="btn btn-primary btn-sm" id="addBtn">
                         <i class="fa fa-plus"></i>
                         Add
                     </button>
@@ -62,7 +62,7 @@
             </div>
         </div>
 
-        <div class="card mt-3">
+        <div id="productCard" class="card mt-3">
             <table class="table">
                 <tbody id="item-list">
                    
