Calculating total price in Dollar and Turkish Lira.

--- a/OEM Calculator/index.html
+++ b/OEM Calculator/index.html
@@ -72,8 +72,8 @@
 
         <div class="card mt-3">
             <div class="card-footer text-right">
-                <p>Total (TL) <strong>680TL</strong></p>
-                <p>Total ($) <strong>100$</strong></p>
+                <p>Total (TL) <strong><span id="total-tl"></span>TL</strong></p>
+                <p>Total ($) <strong><span id="total-dollar"></span>$</strong></p>
             </div>
         </div>
     </div>
